--- a/tls-ca/tasks/main.yml
+++ b/tls-ca/tasks/main.yml
@@ -1,6 +1,12 @@
 - name: CA
   ansible.builtin.include_tasks:
     file: ca.yml
+- name: Etcd CA
+  ansible.builtin.include_tasks:
+    file: etcd-ca.yml
+- name: Etcd Admin
+  ansible.builtin.include_tasks:
+    file: etcd-admin.yml
 - name: Create admin operator TLS certificate
   ansible.builtin.include_tasks:
     file: admin.yml
