--- a/kubeconfig/tasks/controlplane.yml
+++ b/kubeconfig/tasks/controlplane.yml
@@ -7,18 +7,9 @@
     owner: root
     group: root
   vars:
+    kube_apiserver_address: localhost
     client_cert_path: /etc/kubernetes/pki/{{ item }}.crt
     client_key_path: /etc/kubernetes/pki/{{ item }}.key
   loop:
     - kube-controller-manager
     - kube-scheduler
-    - admin
-- name: Generate KubeConfig for host machine
-  ansible.builtin.template:
-    src: kubeconfig.yml.j2
-    dest: /vagrant/share/admin.yml
-    mode: "0640"
-  vars:
-    ca_cert_path: ./ca.crt
-    client_cert_path: ./admin.crt
-    client_key_path: ./admin.key
