--- a/tls/tasks/apiserver.yml
+++ b/tls/tasks/apiserver.yml
@@ -21,15 +21,7 @@
     subject:
       O: system:masters
       OU: Kubernetes The Hard Way
-    subject_alt_name:
-      - IP:127.0.0.1
-      - IP:{{ apiserver_ip }}
-      - DNS:localhost
-      - DNS:{{ inventory_hostname }}
-      - DNS:kubernetes
-      - DNS:kubernetes.default
-      - DNS:kubernetes.default.svc
-      - DNS:kubernetes.default.svc.cluster.local
+    subject_alt_name: "{{ lookup('template', 'apiserver-alt-names.yml.j2') | from_yaml }}"
 - name: Create API Server TLS certificate using CA key and cert
   community.crypto.x509_certificate:
     path: /etc/kubernetes/pki/kube-apiserver.crt
