--- a/tls-ca/tasks/etcd-admin.yml
+++ b/tls-ca/tasks/etcd-admin.yml
@@ -1,6 +1,10 @@
 - name: Generate an empty temp file for CSR
-  ansible.builtin.tempfile:
-    state: file
+  ansible.builtin.file:
+    path: /tmp/etcd-admin.csr
+    state: touch
+    owner: root
+    group: root
+    mode: "0400"
   register: temp_file
 - name: Generate Etcd Admin private key
   community.crypto.openssl_privatekey:
