--- a/k8s/tasks/kubelet.yml
+++ b/k8s/tasks/kubelet.yml
@@ -18,3 +18,6 @@
     state: present
     src: /var/lib/kubernetes/kubelet.rbac.yml
     kubeconfig: /var/lib/kubernetes/admin.kubeconfig
+  tags:
+    - never
+  run_once: true
