--- a/vars/k8s.yml
+++ b/vars/k8s.yml
@@ -1,9 +1,13 @@
 ---
 apiserver_ip: "{{ ansible_facts.all_ipv4_addresses | select('match', '^192.168.56') | first }}"
-cilium_install_args: --set kubeProxyReplacement=true
+cilium_set_values:
+  kubeProxyReplacement: true
+  k8sServiceHost: "{{ ansible_facts.all_ipv4_addresses | select('match', '^192.168.56') | first }}"
+  k8sServicePort: "{{ load_balancer_port }}"
 k8s_version: v1.29.2
 apiserver_port: 6443
 apiserver_ips:
   - 192.168.56.2
   - 192.168.56.3
   - 192.168.56.4
+cilium_version: 1.15.1
