--- a/worker/tasks/finalize.yml
+++ b/worker/tasks/finalize.yml
@@ -1,5 +1,5 @@
 - name: Enable and start service
-  ansible.builtin.service:
+  ansible.builtin.systemd:
     name: "{{ item }}"
     state: started
     enabled: true
