--- a/worker/tasks/runc.yml
+++ b/worker/tasks/runc.yml
@@ -4,4 +4,5 @@
     dest: /usr/local/bin/runc
     mode: "0755"
     use_proxy: false
+    checksum: "sha256:{{ runc_checksum }}"
   when: runc_url.endswith('runc.amd64')
