--- a/vars/k8s.yml
+++ b/vars/k8s.yml
@@ -1,9 +1,5 @@
 ---
 apiserver_ip: "{{ ansible_facts.all_ipv4_addresses | select('match', '^192.168.56') | first }}"
-cilium_set_values:
-  kubeProxyReplacement: true
-  k8sServiceHost: "{{ ansible_facts.all_ipv4_addresses | select('match', '^192.168.56') | first }}"
-  k8sServicePort: "{{ load_balancer_port }}"
 k8s_version: v1.29.2
 apiserver_port: 6443
 apiserver_ips:
@@ -11,3 +7,4 @@ apiserver_ips:
   - 192.168.56.3
   - 192.168.56.4
 cilium_version: 1.15.1
+k8s_static_pods_dir: /etc/kubernetes/manifests
