--- a/k8s/defaults/main.yml
+++ b/k8s/defaults/main.yml
@@ -3,4 +3,4 @@ k8s_version: "{{ lookup('url', 'https://dl.k8s.io/release/stable.txt').split('\n
 kubernetes_public_ip: "{{ ansible_facts.all_ipv4_addresses | select('match', '^192.168.56') | first }}"
 cluster_cidr: 10.200.0.0/16
 service_cluster_ip_range: 10.32.0.0/24
-bind_address: "::"
+bind_address: "{{ apiserver_ip }}"
