--- a/kubeconfig/tasks/main.yml
+++ b/kubeconfig/tasks/main.yml
@@ -15,3 +15,6 @@
 - name: Admin
   ansible.builtin.include_tasks:
     file: admin.yml
+- name: Kube proxy
+  ansible.builtin.include_tasks:
+    file: kube-proxy.yml
