--- a/tls-ca/tasks/admin.yml
+++ b/tls-ca/tasks/admin.yml
@@ -12,7 +12,7 @@
     type: "{{ k8s_privatekey_type }}"
 - name: Generate Admin Operator CSR
   community.crypto.openssl_csr:
-    path: "{{ temp_file.path }}"
+    path: "{{ temp_file.dest }}"
     privatekey_path: /vagrant/share/admin.key
     common_name: 'admin'
     subject:
@@ -21,7 +21,7 @@
 - name: Create Admin Operator TLS certificate using CA key and cert
   community.crypto.x509_certificate:
     path: /vagrant/share/admin.crt
-    csr_path: "{{ temp_file.path }}"
+    csr_path: "{{ temp_file.dest }}"
     privatekey_path: /vagrant/share/admin.key
     ownca_path: /vagrant/share/ca.crt
     ownca_privatekey_path: /vagrant/share/ca.key
