--- a/worker/tasks/cni-plugins.yml
+++ b/worker/tasks/cni-plugins.yml
@@ -5,6 +5,8 @@
     mode: "0644"
     checksum: "sha256:{{ lookup('url', cni_plugins_checksum_url) | split | first }}"
   register: cni_plugins
+  tags:
+    - download
 - name: Ensure cni-plugins directory exists
   ansible.builtin.file:
     path: /opt/cni/bin/
