--- a/k8s/tasks/configure.yml
+++ b/k8s/tasks/configure.yml
@@ -26,7 +26,9 @@
     - kube-apiserver
     - kube-controller-manager
     - kube-scheduler
-  notify: Reload systemd
+  tags:
+    - systemd
+  notify: Reload k8s systemd
 - name: Start all the services
   ansible.builtin.systemd:
     name: '{{ item }}'
