--- a/tls-ca/tasks/main.yml
+++ b/tls-ca/tasks/main.yml
@@ -1,4 +1,12 @@
-- name: CA Tasks
+- name: CA
   ansible.builtin.include_tasks:
-    file: root.yml
-  run_once: true
+    file: ca.yml
+- name: Etcd CA
+  ansible.builtin.include_tasks:
+    file: etcd-ca.yml
+- name: Etcd Admin
+  ansible.builtin.include_tasks:
+    file: etcd-admin.yml
+- name: Create admin operator TLS certificate
+  ansible.builtin.include_tasks:
+    file: admin.yml
