--- a/tls/tasks/main.yml
+++ b/tls/tasks/main.yml
@@ -16,6 +16,9 @@
 - name: CA Cert
   ansible.builtin.include_tasks:
     file: ca-cert.yml
+- name: CoreDNS
+  ansible.builtin.include_tasks:
+    file: coredns.yml
 - name: Admin
   ansible.builtin.include_tasks:
     file: admin.yml
