--- a/etcd/tasks/main.yml
+++ b/etcd/tasks/main.yml
@@ -16,3 +16,8 @@
 - name: CA Cert
   ansible.builtin.include_tasks:
     file: ca-cert.yml
+- name: Configure grub
+  ansible.builtin.import_tasks:
+    file: grub.yml
+  tags:
+    - grub
