--- a/tls/tasks/coredns.yml
+++ b/tls/tasks/coredns.yml
@@ -10,7 +10,7 @@
     subject:
       OU: 'Kubernetes The Hard Way'
     subject_alt_name:
-      - IP:{{ hostvars[inventory_hostname].ansible_facts.all_ipv4_addresses | select('match', '^192.168.56') | first }}
+      - IP:{{ hostvars[inventory_hostname].host_ip }}
       - DNS:{{ inventory_hostname }}
 - name: Create coredns TLS certificate using CA key and cert
   community.crypto.x509_certificate:
